# pulumi-archive

./: .ci-mgmt.yaml  .gitmodules  .golangci.yml  .upgrade-config.yml  Makefile  README.md  mise.toml
.claude/: CLAUDE.md
.github/: copilot-instructions.md
.github/actions/download-bin/: action.yml
.github/actions/download-codegen/: action.yml
.github/actions/download-prerequisites/: action.yml
.github/actions/download-provider/: action.yml
.github/actions/download-tfgen/: action.yml
.github/actions/upload-bin/: action.yml
.github/workflows/: build_provider.yml  build_sdk.yml  command-dispatch.yml  license.yml  lint.yml  main-post-build.yml  main.yml  master.yml  prerelease.yml  prerequisites.yml  publish.yml  pull-request.yml  release.yml  resync-build.yml  run-acceptance-tests.yml  test.yml  upgrade-bridge.yml  verify-release.yml
docs/: _index.md  installation-configuration.md
examples/: examples_nodejs_test.go  go.mod  go.sum
patches/: 0000-fork.patch  0001-Shim-Provider.patch
provider/: go.mod  go.sum  resources.go  shim.go
sdk/: go.mod  go.sum
sdk/dotnet/: File.cs  GetFile.cs  Provider.cs  Pulumi.Archive.csproj  Pulumi.yaml  README.md  Utilities.cs  pulumi-plugin.json
sdk/go/: Pulumi.yaml
sdk/java/: Pulumi.yaml  build.gradle  settings.gradle
sdk/nodejs/: Pulumi.yaml  README.md  file.ts  getFile.ts  index.ts  package.json  provider.ts  tsconfig.json
sdk/python/: Pulumi.yaml  README.md  pyproject.toml  setup.py
sdk/python/pulumi_archive/: README.md  __init__.py  _inputs.py  file.py  get_file.py  outputs.py  provider.py
(+38 files in other folders)
