[project]
  name = "pulumi_archive"
  description = "A Pulumi package for creating and managing Archive cloud resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.134.1,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11; python_version < \"3.11\""]
  keywords = ["pulumi", "category/cloud"]
  readme = "README.md"
  requires-python = ">=3.8"
  version = "0.0.0a0+dev"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://www.pulumi.com/"
    Repository = "https://github.com/pulumi/pulumi-archive"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_archive = ["py.typed", "pulumi-plugin.json"]
